# pylock-dependency-lockfile

./: .coveragerc  FAQ.md  LICENSE.MD  LICENSE.md  PRIVACY.md  README.md  ROADMAP.md  USE_CASES.md  main.py  new_script.py  public_key.pem  pyproject-pydepguard.toml  pyproject-pydepguardnext.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: main.yml  python-publish.yml
archive/v1.0.0/: pydepguard-1.0.0-py3-none-any.whl
archive/v1.1.0/: pydepguard-1.1.0-py3-none-any.whl
pydepguard/: __init__.py
pydepguard/pylock/: __init__.py  cache.py  cli.py  config.py  depscan.py  known_deps.pydepcache  known_transitive.pydepcache  package_handler.py  runner.py  utils.py  validator.py
pydepguardnext/: .sigstore  .sigstore.asc  __init__.py  __main__.py
pydepguardnext/api/: errors.py
pydepguardnext/api/auth/: guard.py
pydepguardnext/api/compat/: validator.py
pydepguardnext/api/factories/: mappingproxy_ovr.py
pydepguardnext/api/install/parser/: cli_install.py  common.py  json.py  magic.py
pydepguardnext/api/jit/: __init__.py  jit.py
pydepguardnext/api/lockfile/: manager.py
pydepguardnext/api/log/: logit.py
pydepguardnext/api/policy/: context.py
pydepguardnext/api/run/: lambda_runner.py
pydepguardnext/api/runtime/: __init__.py  airjail.py  guard.py  importer.py  integrity.py  no_guard.py  pydep_lambda.py  sigverify.py  snapshot.py
pydepguardnext/api/runtime/airjail_filters/: filter_read.py
pydepguardnext/api/seal/: seal.py
pydepguardnext/api/secrets/: os_patch.py  secretentry.py
pydepguardnext/bootstrap/: api_gate.py  boot.py  boot_patrol.py  boot_verify.py  bootwall.py  clock.py  envflags.py  fingerprint.py  function_registry.py  get_uuid.py  modes.py  self.py  state.py  timebox.py  verify_signature.py
pydepguardnext/cli/: compat.py  generate.py  main.py  run.py  shared.py  validate.py
pydepguardnext/standalone/: __init__.py  secrets_manager.py
pylock/: __init__.py  cli.py  depscan.py  lockfile.py  resolver.py  runner.py  validator.py
tests/: test_cli.py  test_depscan.py  test_lockfile.py  test_pydepguard_init.py  test_runner.py  test_utils.py  test_validator.py
tests/api/factories/: test_mappingproxy_ovr.py
tests/api/install/parser/: test_cli_install.py
tests/api/jit/: test_jit.py
tests/api/log/: test_logit.py
tests/api/runtime/: test_guard.py  test_importer.py  test_lambda.py  test_snapshot.py
tests/api/seal/: test_seal.py
tests/api/secrets/: test_secrets.py
tests/pydepguard/: test_cli.py  test_depscan.py  test_runner.py  test_utils.py
tests/standalone/: test_secrets_manager.py
